<resources>
    <string name="app_name">CSIT PORTAL</string>
    <string name="browse">Enroll in B.Sc.CSIT affiliated by TU</string>
    <string name="action_settings">Settings</string>

    <string name="search">What are you searching for?..</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="lostpassword">If you lost your password please contact <a href="mailto:support@cleverfinger.com.au?Subject=Lost%20Password" target="_top">support@cleverfinger.com.au</a></string>

    <string name="defaultpassword">User Guide <a href="http://www.cleverfinger.com.au/user-guide/">http://www.cleverfinger.com.au/user-guide/</a></string>
    <string name="admission">Admission details at  <a href="http://www.csitnepal.com/admission/">http://www.csitnepal.com/admission/</a></string>
    <string name="course">Course Of Study ----- <a href="http://www.csitnepal.com/course-info/course-of-study.php">Click here </a></string>
    <string name="course1">Course Structure ---- <a href="http://www.csitnepal.com/course-info/curricular-structure.php">Click here</a></string>
    <string name="syllabus">Course Structure ---- <a href="http://bsccsitblog.blogspot.com/p/syllabus.html">Click here</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login">Welcome! LOGIN?</string>
    <string name="hello">hello</string>

    <string name="AboutCSIT">About CSIT</string>
    <string name="Course">Course</string>
    <string name="Results">Results</string>
    <string name="Syllabus">Syllabus</string>
    <string name="CollegeList">College List</string>
    <string name="Admission">Admission</string>
    <string name="complain">Complain/Feedback</string>
    <string name="as">Salient Features</string>
    <string name="bs">Eligibilty to study</string>
    <string name="cs">Second semester Result 2017</string>
    <string name="ds">Fourth semester result 2017</string>
    <string name="fifth">Fifth semester result 2017</string>
    <string name="sixth">Sixth semester result 2017</string>
    <string name="seventh">Seventh semester result 2017</string>
    <string name="FirstSem">FirstSem</string>
    <string name="SecondSem">SecondSem</string>
    <string name="ThirdSem">Results</string>
    <string name="FourthSem">Syllabus</string>
    <string name="FifthSem">College List</string>
    <string name="SixthSem">Admission</string>
    <string name="SeventhSem">Salient Features</string>
    <string name="EighthSem">Eligibilty to study</string>
    <string name="q1">  1)  Am I eligible for the program or not?</string>
    <string name="a1">Yes, you are eligible for the 4 years B.Sc.CSIT program if you have completed a twelve year of schooling in the science stream, with a minimum of second division in +2, from any university, board or institution recognized by TU. Then you should have at least 35% in the entrance examination conducted by TU </string>
    <string name="q2">  2)  How can I enroll in B.Sc.CSIT program?</string>
    <string name="a2">Application form is available in affiliated colleges and constituent campuses of TU. Then one can join any colleges of their choice.</string>
    <string name="q3">  3)  I have passed IOE Entrance Exam, so am I eligible to study B.Sc. CSIT?</string>
    <string name="a3">No. Students should pass a separate Entrance Exam conducted by Institute of Science and Technology (IOST), TU, to be eligible to study B.Sc. CSIT.</string>

    <string name="q4">  4)  What are the career opportunities after completing B.Sc.CSIT?</string>
    <string name="a4">Graduates can pursue a range of careers after completing 4 years of B.Sc.CSIT course like Software Developer,Web Developer,Network Administrator,Database Administrator,IT Manager/Officer,System Analyst,Project Manager.</string>

    <string-array name="list">
        <item>@string/AboutCSIT</item>
        <item>@string/Course</item>
        <item>@string/Results</item>
        <item>@string/Syllabus</item>
        <item>@string/CollegeList</item>
        <item>@string/Admission</item>
        <item>@string/complain</item>

    </string-array>
    <string-array name="list1">
        <item>@string/as</item>
        <item>@string/bs</item>

    </string-array>
    <string-array name="list2">
        <item>@string/cs</item>
        <item>@string/ds</item>
        <item>@string/fifth</item>
        <item>@string/sixth</item>
        <item>@string/seventh</item>
    </string-array>
    <string-array name="list3">
        <item>@string/FirstSem</item>
        <item>@string/SecondSem</item>
        <item>ThirdSem</item>
        <item>FourthSem</item>
        <item>FifthSem</item>
        <item>SixthSem</item>
        <item>SeventhSem</item>
        <item>EightSem</item>
    </string-array>

    <string-array name="list4">
        <item>Aberdeen International College</item>
        <item>Academia International College</item>
        <item>Aims College</item>
        <item>Amrit Science Campus</item>
        <item>Birat Multiple College</item>
        <item>Deerwalk Institute of Technology</item>
        <item>Henry Ford International College</item>
        <item>Himalaya College of Engineering</item>
        <item>Kathmandu BernHardt College</item>
        <item>Kathford International College</item>
        <item>Madan Bhandari Memorial College</item>
        <item>New Summit College</item>
        <item>Patan Multiple Campus</item>
        <item>St Xaviers College</item>
        <item>Trinity International College</item>
    </string-array>

    <string-array name="staticText1Elements">

        <item>@string/q1</item>
        <item>@string/a1</item>
        <item>@string/q2</item>
        <item>@string/a2</item>
        <item>@string/q3</item>
        <item>@string/a3</item>
        <item>@string/q4</item>
        <item>@string/a4</item>


    </string-array>
</resources>
