<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#9FA8DA"
    tools:context=".activity.CourseActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/admission_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/fringy_green"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Course"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:id="@+id/toolbar_title"
            android:textSize="25sp"
            />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admission_toolbar"
        android:layout_gravity="center"
        android:autoLink="web"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/course"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        android:textColorLink="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtad"
        android:layout_gravity="center"
        android:autoLink="web"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/course1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        android:textColorLink="#000"
        android:textSize="20sp"
        android:textStyle="bold" />



</RelativeLayout>